fixing homepage gap

--- a/wp-content/themes/barometer-mobile/css/layout.css
+++ b/wp-content/themes/barometer-mobile/css/layout.css
@@ -336,6 +336,7 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
+	height: 100%;
 	width: 100%;
 }
 .list-holder {
